--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="textbox --textright">
                             <h2>DECOR</h2>
                             <p>We make all types of wooden decor as per design given by Architect,Interior designer, contractor which is suitable your premises.</p>
-                            <a href="#" class="btnmore"><span>learn more</span><img src="img/icon/arrow-more.svg" alt="" ></a> 
+                            <a href="#" class="btnmore --decor"><span>learn more</span><img src="img/icon/arrow-more.svg" alt="" ></a> 
                         </div>
                         <div class="image"><img src="img/picture/pic2.jpg" alt=""></div>
                     </div>
@@ -136,21 +136,21 @@
                         <div class="item">
                             <div class="item-circle">
                                 <img src="img/video/video1.jpg" alt="">
-                                <div class="play-btn"><img src="img/video/button-play.jpg" alt=""></div>
+                                <div class="play-btn"><img src="img/button-play.svg" alt=""></div>
                             </div>
                             <p>Innovative Design</p>
                         </div>
                         <div class="item">
                             <div class="item-circle">
                                 <img src="img/video/video2.jpg" alt="">
-                                <div class="play-btn"><img src="img/video/button-play.jpg" alt=""></div>
+                                <div class="play-btn"><img src="img/button-play.svg" alt=""></div>
                             </div>
                             <p>High-level Skills</p>
                         </div>
                         <div class="item">
                             <div class="item-circle">
                                 <img src="img/video/video3.jpg" alt="">
-                                <div class="play-btn"><img src="img/video/button-play.jpg" alt=""></div>
+                                <div class="play-btn"><img src="img/button-play.svg" alt=""></div>
                             </div>
                             <p>Quality Products</p>
                         </div>
