--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
                     </div>
                 </div>
             </div>
+            <!-- <div class="background__image">
+                <img src="img/background.jpg" alt="">
+            </div> -->
         </section>
         <!-- Component About -->
         <section class="about pd">
