--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a href="#">AU</a>
                     </div>
                 </div>
-                <div class="btnmenu"><a href="#"><span></span></a></div>
+                <div class="btnmenu"><span></span></div>
             </div> 
         </div>
     </header>
