--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
     <nav class="nav">
         <ul>
-            <li><a href="#slider">HOME</a></li>
+            <li><a href="#slider" class="active">HOME</a></li>
             <li><a href="#product">PRODUCT</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#gallery">GALLERY</a></li>
