complited HTML SCSS pages Wooder

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                         <i><img src="img/icon/arrow-sub.png" alt=""></i>
                     </div>
                     <div class="lang__option">
-                        <a href="#">VN</a>
-                        <a href="#">JP</a>
-                        <a href="#">AU</a>
+                        <a href="javascript:void(0)">VN</a>
+                        <a href="javascript:void(0)">JP</a>
+                        <a href="javascript:void(0)">AU</a>
                     </div>
                 </div>
                 <div class="btnmenu"><span></span></div>
@@ -231,14 +231,14 @@
                     <div class="news__list-textbox">
                         <div class="image"><a href="#"><img src="img/news/news2.jpg" alt=""></a></div>
                         <div class="text">
-                            <h3 class="title"><a href="#" title="Where does it come from?">Where does it come from?</a></h3>
+                            <h3 class="title"><a href="#" title="There are many variations of passages">There are many variations of passages</a></h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</p>
                         </div>
                     </div>
                     <div class="news__list-textbox">
                         <div class="image"><a href="#"><img src="img/news/news3.jpg" alt=""></a></div>
                         <div class="text">
-                            <h3 class="title"><a href="#" title="Where does it come from?">Where does it come from?</a></h3>
+                            <h3 class="title"><a href="#" title="It is a long established fact that a reader">It is a long established fact that a reader</a></h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde reprehenderit enim asperiores ipsam illum consequuntur, ratione, sequi deserunt dolorem saepe veritatis corporis iste illo necessitatibus sed at, voluptates cum.</p>
                         </div>
                     </div>
