--- a/index.html
+++ b/index.html
@@ -245,6 +245,11 @@
                 </div>
             </div>
         </section>
+        <section class="info">
+            <div class="container">
+                
+            </div>
+        </section>
         <!-- Component Image move -->
         <section class="photos pd">
             <img src="img/img1.jpg" alt="">
@@ -253,6 +258,9 @@
             <img src="img/img4.jpg" alt="">
         </section>
     </main>
+    <div class="totop">
+        <img src="img/back-to-top.svg" alt="">
+    </div>
     <footer>
         <div class="container">
             <div class="copy">© 2016 WOODER, Demo by CFD</div>
