scroll menu header

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- Component Silder -->
         <section class="slider">
             <div class="slider__images">
-                <div class="slider__images-item">
+                <div class="slider__images-item ">
                     <div class="text">
                         <h2>WOODER</h2>
                         <a href="#" class="btnmain">
@@ -63,26 +63,26 @@
                     </div>
                     <img src="img/slide/slide1.jpg" alt="" class="banner">
                 </div>
-                <!-- <div class="slider__images-item">
+                <div class="slider__images-item">
                     <div class="text">
-                        <h2>WOODER 2</h2>
-                        <a href="#" class="btn">
+                        <h2>WOODER</h2>
+                        <a href="#" class="btnmain">
                             LEARN MORE
                             <i><img src="img/icon/arrow-more.png" alt=""></i>
                         </a>
                     </div>
                     <img src="img/slide/slide2.jpg" alt="" class="banner"> 
                 </div>
-                <div class="slider__images-item">
+                <div class="slider__images-item active">
                     <div class="text">
-                        <h2>WOODER 3</h2>
-                        <a href="#" class="btn">
+                        <h2>WOODER</h2>
+                        <a href="#" class="btnmain">
                             LEARN MORE
                             <i><img src="img/icon/arrow-more.png" alt=""></i>
                         </a>
                     </div>
                     <img src="img/slide/slide3.jpg" alt="" class="banner">
-                </div> -->
+                </div>
             </div>
             <div class="slider__bottom">
                 <div class="container-fluid">
