--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- Component Silder -->
         <section class="slider">
             <div class="slider__images">
-                <div class="slider__images-item ">
+                <div class="slider__images-item active">
                     <div class="text">
                         <h2>WOODER</h2>
                         <a href="#" class="btnmain">
@@ -73,7 +73,7 @@
                     </div>
                     <img src="img/slide/slide2.jpg" alt="" class="banner"> 
                 </div>
-                <div class="slider__images-item active">
+                <div class="slider__images-item">
                     <div class="text">
                         <h2>WOODER</h2>
                         <a href="#" class="btnmain">
@@ -87,9 +87,8 @@
             <div class="slider__bottom">
                 <div class="container-fluid">
                     <div class="paging">
-                        <span>01</span>
+                        <span class="number">01</span>
                         <ul>
-                            <li class="active"></li>
                             <li></li>
                             <li></li>
                             <li></li>
@@ -136,21 +135,21 @@
                         <div class="item">
                             <div class="item-circle">
                                 <img src="img/video/video1.jpg" alt="">
-                                <div class="play-btn"><img src="img/button-play.svg" alt=""></div>
+                                <div data-video-id="Ws-QlpSltr8" class="play-btn"><img src="img/button-play.svg" alt=""></div>
                             </div>
                             <p>Innovative Design</p>
                         </div>
                         <div class="item">
                             <div class="item-circle">
                                 <img src="img/video/video2.jpg" alt="">
-                                <div class="play-btn"><img src="img/button-play.svg" alt=""></div>
+                                <div data-video-id="FuwU2SyG1d4" class="play-btn"><img src="img/button-play.svg" alt=""></div>
                             </div>
                             <p>High-level Skills</p>
                         </div>
                         <div class="item">
                             <div class="item-circle">
                                 <img src="img/video/video3.jpg" alt="">
-                                <div class="play-btn"><img src="img/button-play.svg" alt=""></div>
+                                <div data-video-id="d44UTUSTYKU" class="play-btn"><img src="img/button-play.svg" alt=""></div>
                             </div>
                             <p>Quality Products</p>
                         </div>
@@ -268,6 +267,12 @@
             <div class="backtotop"><a href="#">Back To Top</a></div>
         </div>
     </footer>
+    <div class="popup-video">
+        <div class="iframe-wrap">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Ws-QlpSltr8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="close">x</div>
+        </div>
+    </div>
 
     <script src="dest/jsmain.min.js"></script>
     <script src="dest/main.js"></script>
