add libs Photoswipe

--- a/index.html
+++ b/index.html
@@ -194,6 +194,36 @@
                     <p>We are a team of professionals in the wood processing and the creation of wooden furniture of the highest class</p>
                 </div>
                 <div class="gallery__list">
+                    <div class="carousel-img" itemscope data-pswp-uid="1">
+                        <figure class="gallery__list-img img1">
+                        <a href="img/gallery/lagre1.jpg" data-size="343x384">
+                            <img src="img/gallery/lagre1.jpg" alt="">
+                        </a>
+                        </figure>
+                        <figure class="gallery__list-img img2">
+                            <a href="img/gallery/lagre3.jpg" data-size="368x387">
+                                <img src="img/gallery/lagre3.jpg" alt="">
+                            </a>
+                        </figure>
+                        <figure class="gallery__list-img img3">
+                            <a href="img/gallery/lagre4.jpg" data-size="1128x470">
+                                <img src="img/gallery/lagre4.jpg" alt="">
+                            </a>
+                        </figure>
+                        <figure class="gallery__list-img img4">
+                            <a href="img/gallery/lagre2.jpg" data-size="400x214">
+                                <img src="img/gallery/lagre2.jpg" alt="">
+                            </a>
+                        </figure>
+                        <figure class="gallery__list-img img5">
+                            <a href="img/gallery/lagre5.jpg" data-size="826x466">
+                                <img src="img/gallery/lagre5.jpg" alt="">
+                            </a>
+                        </figure>
+                    </div>
+                    
+                </div>
+                <!-- <div class="gallery__list">
                     <div class="gallery__list-img">
                         <img src="img/gallery/lagre1.jpg" alt="">
                     </div>
@@ -209,7 +239,7 @@
                     <div class="gallery__list-img">
                         <img src="img/gallery/lagre5.jpg" alt="">
                     </div>
-                </div> 
+                </div>  -->
             </div>
         </section>
         <!-- Component News -->
@@ -273,7 +303,43 @@
             <div class="close">x</div>
         </div>
     </div>
-
+    <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="pswp__bg"></div>
+        <div class="pswp__scroll-wrap">
+            <div class="pswp__container">
+                <div class="pswp__item"></div>
+                <div class="pswp__item"></div>
+                <div class="pswp__item"></div>
+            </div>
+            <div class="pswp__ui pswp__ui--hidden">
+                <div class="pswp__top-bar">
+                    <div class="pswp__counter"></div>
+                    <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+                    <button class="pswp__button pswp__button--share" title="Share"></button>
+                    <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+                    <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+                    <div class="pswp__preloader">
+                        <div class="pswp__preloader__icn">
+                            <div class="pswp__preloader__cut">
+                                <div class="pswp__preloader__donut"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+                    <div class="pswp__share-tooltip"></div>
+                </div>
+                <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+                </button>
+                <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+                </button>
+                <div class="pswp__caption">
+                    <div class="pswp__caption__center"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <script src="dest/jsmain.min.js"></script>
     <script src="dest/main.js"></script>
 </body>
