--- a/jquery.html
+++ b/jquery.html
@@ -9,6 +9,27 @@
     <link rel="stylesheet" href="dest/fonts.css">
 </head>
 <body>
+    <header class="header">
+        <div class="container-fluid">
+            <div class="menu-hambeger">
+                <div class="button">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <span class="text">Menu</span>
+            </div>
+            <div class="logo">
+                <a href="https://www.cfdtraining.vn/"><img src="/themes/cfd-training/img/logo.svg" alt=""></a>
+            </div>
+            <div class="right">
+                <div class="login">
+                    <a href="btn-login">Đăng Nhập</a>
+                    <a href="btn-register">Đăng Ký</a>
+                </div>
+            </div>
+        </div>
+    </header>
     <main class="jquery">
         <section class="pd">
             <div class="container">
