--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wooder</title>
     <link rel="stylesheet" href="dest/style.min.css">
+    <link rel="stylesheet" href="dest/stylelibs.min.css">
     <link rel="stylesheet" href="dest/fonts.css">
 </head>
 <body>
@@ -53,7 +54,7 @@
         <!-- Component Silder -->
         <section class="slider">
             <div class="slider__images">
-                <div class="slider__images-item active">
+                <div class="slider__images-item">
                     <div class="text">
                         <h2>WOODER</h2>
                         <a href="#" class="btnmain">
