--- a/index.html
+++ b/index.html
@@ -89,11 +89,7 @@
                 <div class="container-fluid">
                     <div class="paging">
                         <span class="number">01</span>
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
+                        <div class="dotted"></div>
                     </div>
                     <div class="mouse">
                         <img src="img/icon/mouse.png" alt="" class="mouse__img">
@@ -282,10 +278,18 @@
         </section>
         <!-- Component Image move -->
         <section class="photos pd">
-            <img src="img/img1.jpg" alt="">
-            <img src="img/img2.jpg" alt="">
-            <img src="img/img3.jpg" alt="">
-            <img src="img/img4.jpg" alt="">
+            <div class="photos__list">
+                <img src="img/img1.jpg" alt="">
+                <img src="img/img2.jpg" alt="">
+                <img src="img/img3.jpg" alt="">
+                <img src="img/img4.jpg" alt="">
+            </div>
+            <div class="photos__control">
+                <span>Trượt qua</span>
+                <div class="timeline">
+                    <div class="process"></div>
+                </div>
+            </div>
         </section>
     </main>
     <div class="totop">
