--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 </div>
                 <div class="btnmenu"><span></span></div>
             </div> 
+            <div class="header-process"></div>
         </div>
     </header>
     <nav class="nav">
